[gd_scene load_steps=3 format=3 uid="uid://b5cbd3afjutu2"]

[ext_resource type="Theme" uid="uid://c8ustssjawosr" path="res://main_theme.tres" id="1_7npvu"]
[ext_resource type="Script" path="res://multiplayer_lobby.gd" id="2_a72nn"]

[node name="MultiplayerLobby" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7npvu")
theme_type_variation = &"MenuPanelContainerBackground"
script = ExtResource("2_a72nn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Lobby" type="RichTextLabel" parent="MarginContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 48
text = "Lobby"
fit_content = true
autowrap_mode = 0

[node name="PlayersBackground" type="PanelContainer" parent="MarginContainer/Menu"]
layout_mode = 2
size_flags_vertical = 3

[node name="Players" type="VBoxContainer" parent="MarginContainer/Menu/PlayersBackground"]
layout_mode = 2

[node name="BottomRowButtons" type="HBoxContainer" parent="MarginContainer/Menu"]
layout_mode = 2

[node name="Leave" type="Button" parent="MarginContainer/Menu/BottomRowButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Leave"

[node name="Spacer" type="Control" parent="MarginContainer/Menu/BottomRowButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Start" type="Button" parent="MarginContainer/Menu/BottomRowButtons"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 24
disabled = true
text = "Start"

[connection signal="pressed" from="MarginContainer/Menu/BottomRowButtons/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/BottomRowButtons/Start" to="." method="_on_start_pressed"]
